--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^4.7.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "prop-types": "^15.6.2",
     "react-scripts": "^2.1.1",
     "validator": "^10.9.0"
   },
