--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "prop-types": "^15.6.2",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-scripts": "^2.1.1",
+    "styled-components": "^4.1.3",
     "validator": "^10.11.0"
   },
   "devDependencies": {
