--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.8.1",
     "react-scripts": "^2.1.1",
     "react-swipeable-views": "^0.13.1",
+    "react-swipeable-views-utils": "^0.13.1",
     "styled-components": "^4.1.3",
     "validator": "^10.11.0"
   },
