--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
+    "eslint": "^5.14.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "nodemon": "^1.18.9"
   },
   "scripts": {
