--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.2.6",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.1",
@@ -19,9 +20,12 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.4",
     "react-select": "^2.3.0",
+    "react-swipeable-views": "^0.13.1",
+    "react-swipeable-views-utils": "^0.13.1",
     "react-transition-group": "^2.5.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "node-sass-chokidar": "^1.3.4",
