--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,8 @@
     "react-open-weather": "^0.4.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.4",
     "react-select": "^2.3.0",
+    "react-scripts": "^2.1.5",
     "react-swipeable-views": "^0.13.1",
     "react-swipeable-views-utils": "^0.13.1",
     "react-transition-group": "^2.5.3",
@@ -28,6 +28,11 @@
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.5"
   },
