--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,9 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.1",
+    "react": "^16.8.2",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.8.1",
+    "react-dom": "^16.8.2",
     "react-dropdown": "^1.6.2",
     "react-grid-layout": "^0.16.6",
     "react-live-clock": "^3.0.0",
@@ -18,8 +18,8 @@
     "react-open-weather": "^0.4.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-select": "^2.3.0",
     "react-scripts": "^2.1.5",
+    "react-select": "^2.4.1",
     "react-swipeable-views": "^0.13.1",
     "react-swipeable-views-utils": "^0.13.1",
     "react-transition-group": "^2.5.3",
@@ -34,6 +34,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "node-sass-chokidar": "^1.3.4",
+    "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
