--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.4.0",
     "jwt-decode": "^2.2.0",
-    "mongoose": "^5.4.9",
+    "mongoose": "^5.4.13",
     "node-sass-chokidar": "^1.3.4",
     "nodemailer": "^4.7.0",
     "passport": "^0.4.0",
@@ -25,7 +25,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "^2.1.1",
+    "react-scripts": "^2.1.5",
     "react-swipeable-views": "^0.13.1",
     "react-swipeable-views-utils": "^0.13.1",
     "styled-components": "^4.1.3",
@@ -36,7 +36,7 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "install-server": "npm install --save axios bcryptjs body-parser concurrently express gravatar jsonwebtoken jwt-decode mongoose node-sass-chokidar nodemailer passport passport-jwt validator && npm install --save--dev nodemon",
-    "install-client": "npm install --save axios classnames jwt-decode moment react react-copy-to-clipboard react-dom react-grid-layout react-live-clock react-moment react-open-weather react-redux react-router-dom react-scripts react-select react-transition-group redux redux-thunk --prefix client && npm install --save--dev node-sass-chokidar npm-run-all --prefix client",
+    "install-client": "npm install --save axios classnames react-swipeable-views react-swipeable-views-utils styled-components jwt-decode moment react react-copy-to-clipboard react-dom react-grid-layout react-live-clock react-moment react-open-weather react-redux react-router-dom react-scripts react-select react-transition-group redux redux-thunk --prefix client && npm install --save--dev node-sass-chokidar npm-run-all --prefix client",
     "install-all": "npm run install-server && npm run install-client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run heroku-build --prefix client"
