--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "styled-components": "^4.1.3",
     "validator": "^10.11.0"
   },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
+  },
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
