Ignoring installation files

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,21 @@ client/ansi-html.cmd
 client/ansi-html
 client/acorn.cmd
 client/acorn
+client/autoprefixer
+client/autoprefixer.cmd
+client/css-blank-pseudo
+client/css-blank-pseudo.cmd
+client/css-has-pseudo
+client/css-has-pseudo.cmd
+client/css-prefers-color-scheme
+client/css-prefers-color-scheme.cmd
+client/parser
+client/parser.cmd
+client/pidtree
+client/pidtree.cmd
+client/regexp-tree
+client/regexp-tree.cmd
+client/terser
+client/terser.cmd
+client/watch
+client/watch.cmd
